--- a/contact.html
+++ b/contact.html
@@ -339,39 +339,31 @@
 
   <!-- ======================== HEADER END ======================== -->
     
-<!-- ======================== MAIN 1 START ======================== -->
 <section>
-  <div class="container-fluid home  d-flex flex-column align-items-center justify-content-center">
-   <!-- =============================== BANNER IMAGE START =========================================== -->
- <img src="Assets/images/Banner-Image/banner-img-17.jpg" class="m-0  p-0 w-100 position-absolute banner-img " alt="">
-    <!-- =============================== BANNER IMAGE END =========================================== -->
-   
-  <!-- ======================== MAIN SUB DIV START ======================== -->
-  <div class="d-flex flex-column justify-content-center align-items-center">
-  <div class="col-12 text-white ">
-    <h2 class=" display-3 text-center">Contact-Us</h2>
-    <h5 class="text-center">Home - Contact </h5>
-  </div>
-  </div>
-  <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
-    <li>AI Product Solution</li>
-  </button>  
-  <!-- ======================== MAIN SUB DIV END ======================== -->
-  
-   </div>
+    <div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
+        <!-- =============================== BANNER IMAGE START =========================================== -->
+        <img src="Assets/images/Banner-Image/contact_us_banner-img.png" class="m-0  p-0 w-100 position-absolute banner-img " alt="">
+        <!-- =============================== BANNER IMAGE END =========================================== -->
+        <!-- ======================== MAIN SUB DIV START ======================== -->
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <div class="col-12 text-white ">
+                <h2 class=" display-3 text-center">Contact-Us</h2>
+                <h5 class="text-center">Home - Contact </h5>
+            </div>
+        </div>
+        <button class="btnhome btnhome1 d-flex fw-bold">
+            <span class="pe-3">Home</span>
+            <li>AI Product Solution</li>
+        </button>
+        <!-- ======================== MAIN SUB DIV END ======================== -->
+
+    </div>
 </section>
- <!-- ======================== MAIN 1 END ======================== -->
-<!-- ======================== MAP START ======================== -->
-<section>
-  <div class="container-fluid m-0 p-0 ">
-    <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   </div>
-</section>
-<!-- ======================== MAP END ======================== -->
-  <!-- ======================== CONTACT-US START ======================== -->
+<!-- ======================== MAIN 1 END ======================== -->
+<!-- ======================== CONTACT-US START ======================== -->
   <section>
     <div
-      class="container-fluid d-flex flex-lg-row py-5   text-white1 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
+      class="container-fluid d-flex flex-lg-row mb-3   text-white1 align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
       <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
         <h2 class="strk text-start position-relative ">Contact
           Us</span></h2>
@@ -379,107 +371,105 @@
 
       </div>
       <div class="d-flex text-dark1 justify-content-end col-lg-4 mt-5 mt-lg-0">
-        <h4 class="text-end text-capitalize">Establish Trust</h4>
+        <h4 class="text-end text-capitalize">Establishing Trust</h4>
       </div>
     </div>
-    <div class="container-fluid m-0 who py-4 d-flex flex-column align-items-center">
+  <div class="container-fluid m-0 para_bg py-4 d-flex flex-column align-items-center">
 
 
-      <h2 class="fs-1  text-white1">Let’s Plan Together</h2>
-      <p class="col-text fs-6 py-4 fw-normal locte  text-white1">
-        Design, Architect, Develop & Automate your business processes through AI. Increase your business
-        productivity!</span></p>
-      <div class="d-flex flex-lg-row flex-column container-fluid px-5 gap-2">
+      <h2 class="fs-1  ">Let’s Plan Together</h2>
+      <p class="col-text col-lg-6 text-center fs-5 py-4 fw-light locte  ">
+          Design, Architect, Develop & Automate your business processes through AI. Increase your business
+          productivity!</span>
+      </p>
 
 
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-          <i class="fa-solid fa-location-dot bg fs-4 mt-2 bg-col text-white1 p-3  rounded"></i>
 
-
-          <h5 class="mt-2  ps-lg-2 text-white fw-light">Location</h5>
-          <span class="col-text locte text-white fw-light text-center ps-lg-2  text-center">
-            P. O. Box 409, 9300 Conroy
-            Windermere, Windermere, FL-34786, USA</span>
-
-
-        </div>
-
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-          <i class="fa-solid fa-headset bg fs-4 mt-2 bg-col text-white1 p-3 rounded"></i>
-
-          <h5 class="mt-2">Support</h5>
-          <span class="col-text locte ps-lg-2 text-lg-start text-center">
-            + 1 (689) 276-4636</span>
-
-
-        </div>
-        <div
-          class="col-lg-4 col-12 my-2 borders p-2 rounded-3 text-white1 d-flex  flex-column justify-content-center justify-content-lg-start align-items-center shadow-sm   adbook">
-
-
-          <i class="fa-solid fa-envelope fs-4 mt-2 bg text-white1 p-3 rounded"></i>
-          <h5 class="mt-2">Email</h5>
-          <span class="col-text locte ps-lg-2 text-lg-start text-center ">
-            info@aisystemsoft.com
-          </span>
-
-        </div>
-
-
-      </div>
-
-
-    </div>
-    <div class="container-fluid who m-0 d-flex flex-lg-row flex-column justify-content-between   pt-5 contact-page">
+  </div>
+    <div class="container-fluid  para_bg  m-0 d-flex flex-lg-row flex-column justify-content-between   contact-page">
       <div class="col-lg-6">
-        <img src="Assets/images/Pictures/co.jpg" class="img-fluid col-12 contact_image" alt="">
+             <div class="d-flex  flex-column container-fluid  ">
+
+
+          <div class=" col-lg-8 rounded-4 shadow-sm my-2 bg-white  p-2 rounded-3 d-flex  flex-column justify-content-lg-start  align-items-start shadostart adbook">
+              <i class="fa-solid fa-location-dot para_bg col-org fs-4 mt-2 bg-col   p-3  rounded"></i>
+
+
+              <h5 class="mt-2  ps-lg-2  fw-medium">Location</h5>
+              <span class="col-text locte  fw-light  ps-lg-2 ">
+                  P. O. Box 409, 9300 Conroy
+                  Windermere, Windermere, FL-34786, USA
+              </span>
+
+
+          </div>
+
+          <div class="col-lg-8 rounded-4 shadow-sm my-2  bg-white p-2 rounded-3  d-flex  flex-column justify-content-start justify-content-lg-start align-items-start shadow-sm   adbook">
+
+              <i class=" fa-solid fa-headset para_bg col-org fs-4 mt-2 bg-col   p-3  rounded"></i>
+
+              <h5 class="mt-2  ps-lg-2  fw-medium">Support</h5>
+              <span class="col-text locte  fw-light  ps-lg-2 ">
+                  + 1 (689) 276-4636
+              </span>
+
+
+          </div>
+          <div class=" col-lg-8 rounded-4 shadow-sm my-2 bg-white p-2 rounded-3  d-flex  flex-column justify-content-start justify-content-lg-start align-items-start shadow-sm   adbook">
+ 
+
+              <i class="fa-solid fa-envelope fs-4 mt-2 para_bg col-org  p-3 rounded"></i>
+              <h5 class="mt-2  ps-lg-2  fw-medium">Email</h5>
+              <span class="col-text locte  fw-light  ps-lg-2  ">
+                  info@aisystemsoft.com
+              </span>
+
+          </div>
+
+
+      </div>
       </div>
 
-      <div class="col-lg-6 bg1 py-5 col-12 d-flex flex-column align-items-start  formm px-4">
-        <h4 class="text-white1 text-end col-12 pb-3">For Any Assitance –<br>Kindly Provide Your Information</h4>
+      <div class="col-lg-6 bg-white pt-5 mb-4 col-12 d-flex flex-column align-items-start  formm px-4">
+        <h5 class=" text-end col-12 pb-3 fw-light">The Entrepreneur makes a decision in moment Now!
+Connect with us to lay out your miles stones Map</h5>
         <!-- CONTACT FORM START -->
-        <form class="mt-5" id="form">
+        <form class=" form_of_contact_us_section" id="form">
           <div class="row g-3">
-            <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="firstName" maxlength="17" placeholder="First Name" required>
-            </div>
-            <div class="col-md-6">
-              <input type="text" class="form-control form-control1" id="lastName" maxlength="17" placeholder="Last Name" required>
-            </div>
+             <div class="col-md-6">
+      <input type="text" class="form-control form-control1" id="nm1" name="nm1" placeholder="Your Name Please" maxlength="25" required>
+  </div>
+          <div class="col-md-6">
+     <input type="email" class="form-control form-control1 " id="emailadd" name="emailadd" placeholder="Your Email" maxlength="35" required>
+ </div>
+ <div class="col-md-6">
+     <input id="cellno" name="cellno" type="tel" class="form-control form-control1" placeholder="Contact No" maxlength="15" required>
+ </div>
+          <div class="col-md-6">
+    <select class="form-select form-control1 form-control" id="querytopic" name="querytopic" aria-label="Default select example">
+        <option value="AI Products & Solutions" Selected>AI Products & Solutions</option>
+        <option value="GRC Services">GRC Services</option>
+        <option value="AI Driven  Web & App Development">AI Driven Web & App Development</option>
+        <option value="Project Management">Project Management</option>
+
+    </select>
 
 
-            <div class="col-md-6">
-              <input type="email" class="form-control form-control1 " id="email" maxlength="17" placeholder="Your Email" required>
-            </div>
-            <div class="col-md-6 pt-2 ">
-              <input id="phone" type="tel" class="mb-3 pt-1 col-12 mb-3 phonenum form-control1">
-            </div>
-            <div class="col-md-12">
-              <select class="form-select form-control1" id="queryTopic" aria-label="Default select example">
 
-                <option value="AI Products & Solutions">AI Products & Solutions</option>
-                <option value="GRC Services">GRC Services</option>
-                <option value="AI Driven  Web & App Development">AI Driven Web & App Development</option>
+</div>
+<div class="col-md-12">
+    <textarea class="form-control form-control1" id="inquirytxt" name="inquirytxt" rows="4"
+              placeholder="Write your message here..." maxlength="100"></textarea>
+</div>
+           
+           <div class="col-12 text-center mb-5">
+     <button type="submit" id="contact-form"
+             class="mt-3 mx-auto   btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+         SEND NOW
+         <i class="fa-solid fa-paper-plane icon-hover"></i>
 
-
-              </select>
-
-            </div>
-            <div class="col-12">
-              <textarea class="form-control form-control1" id="message" rows="4"
-                maxlength="17" placeholder="Write your message here..."></textarea>
-            </div>
-            <div class="col-12 text-center mb-5">
-              <button type="submit" id="contact-form"
-                class="mt-3 mx-auto who text-white1 btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-                SEND NOW
-                <i class="fa-solid fa-paper-plane icon-hover"></i>
-
-              </button>
-            </div>
+     </button>
+ </div>
           </div>
         </form>
         <!-- CONTACT FORM END -->
@@ -490,7 +480,14 @@
 
   </section>
   <!-- ======================== CONTACT-US END ======================== -->
-
+<!-- ======================== CONTACT-US END ======================== -->
+<!-- ======================== MAP START ======================== -->
+<section>
+    <div class="container-fluid m-0 p-0 py-5 ">
+        <iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.530119805925!2d-81.51001662389079!3d28.493694175740895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ed1863281cf%3A0x80aa2af03e1c4035!2sConroy%20Rd%2C%20Windermere%2C%20FL%2034786%2C%20USA!5e0!3m2!1sen!2s!4v1739033535734!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</section>
+<!-- ======================== MAP END ======================== -->
 
   <!-- ======================== OUR PRODUCT START======================== -->
 <section>
