--- a/plannet_scan.html
+++ b/plannet_scan.html
@@ -790,40 +790,81 @@
   <!-- ======================== FORM END ======================== -->
    <!-- ======================== OUR PRODUCT START======================== -->
    <section>
-  <div class="container-fluid roun my-5 p-3 bg d-flex flex-row justify-content-center pos align-items-center">
-    <div class="d-flex flex-row justify-content-center flex-column">
-      <h4 class="text-white float-start">Our Products</h4>
+    <div
+      class="container-fluid roun my-5 p-3 bg d-flex justify-content-center align-items-center"
+    >
+      <div class="w-100">
+        <h4 class="text-white mb-4">Our Products</h4>
 
-      <div class="product_swiper swiper mySwiper container bg-white col-12">
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide"><img src="Assets/images/Products-images/automan.png" class="img-fluid mx-lg-4" alt="automan" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-lg-4" alt="buoylight" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-lg-4" alt="buoyspot" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-lg-4" alt="callmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-lg-4" alt="carmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-lg-4" alt="facematics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-lg-4" alt="inteliOCR" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/iport.png" class="img-fluid mx-lg-4" alt="iport" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-lg-4" alt="planetscan" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-lg-4" alt="mallmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-lg-4" alt="medbot" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-lg-4" alt="meddroid" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-lg-4" alt="mediatalks" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-lg-4" alt="posmatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-lg-4" alt="predicto" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-lg-4" alt="retailatics" /></div>
-          <div class="swiper-slide"><img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-lg-4" alt="retailmatics" /></div>
+        <!-- Swiper container -->
+        <div class="swiper product_swiper bg-white p-2 rounded">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/automan.png" class="img-fluid" alt="automan" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/buoylight.png" class="img-fluid" alt="buoylight" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid" alt="buoyspot" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/callmatics.png" class="img-fluid" alt="callmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/carmatics.png" class="img-fluid" alt="carmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/facematics.png" class="img-fluid" alt="facematics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid" alt="inteliOCR" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/iport.png" class="img-fluid" alt="iport" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid" alt="mallmatics-02" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/planetscan.png" class="img-fluid" alt="planetscan" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid" alt="mallmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/medbot.png" class="img-fluid" alt="medbot" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/meddroid.png" class="img-fluid" alt="meddroid" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid" alt="mediatalks" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/posmatics.png" class="img-fluid" alt="posmatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/predicto.png" class="img-fluid" alt="predicto" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/retailatics.png" class="img-fluid" alt="retailatics" />
+            </div>
+            <div class="swiper-slide">
+              <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid" alt="retailmatics" />
+            </div>
+          </div>
+
+          <!-- Optional pagination dots -->
+          <div class="swiper-pagination"></div>
         </div>
-      </div>
 
-      <div class="col-12">
-        <h4 class="float-end mt-3 text-white">Ultimate AI Powered Products</h4>
+        <h4 class="text-white mt-3 text-end">
+          Ultimate AI Powered Products
+        </h4>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- ======================== OUR PRODUCT END======================== -->
 <!-- ======================== FOOTER START ======================== -->
