--- a/index.html
+++ b/index.html
@@ -484,8 +484,10 @@
     </div>
 </section>
   <!-- ======================== FOOTPRINTS & PROJECT END ======================== -->
+ 
+  <!-- ======================== SERVICE & PORTFOLIO START ======================== -->
   <section class="my-4">
-    <div
+     <div
       class="container-fluid d-flex flex-lg-row   align-items-lg-center flex-column mt-lg-0 mt-5 justify-content-between">
       <div class="d-flex flex-lg-row flex-column align-items-lg-center ">
         <h2 class="strk text-start position-relative">Services
@@ -497,9 +499,6 @@
         <h4 class="text-end">Digitalized your Strategies & Redefining Future.</h4>
       </div>
     </div>
-  </section>
-  <!-- ======================== SERVICE & PORTFOLIO START ======================== -->
-  <section class="my-4">
     <div class="container-fluid d-flex flex-wrap cardss">
         <div class="col-lg-6 col-12 my-2  cardss1">
             <div class="col-lg-12 col-12 d-flex flex-row">
@@ -897,7 +896,7 @@ Connect with us to lay out your miles stones Map</h5>
   <!-- ======================== CONTACT-US END ======================== -->
 
   <!-- ======================== OUR PRODUCT START======================== -->
-<section>
+  <section>
     <div
       class="container-fluid roun my-5 p-3 bg d-flex justify-content-center align-items-center"
     >
@@ -973,9 +972,7 @@ Connect with us to lay out your miles stones Map</h5>
       </div>
     </div>
   </section>
-
-
-  <!-- ======================== OUR PRODUCT END======================== -->
+  <!-- ======================== OUR PRODUCT END ======================== -->
 
   <!-- ======================== FOOTER START ======================== -->
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
@@ -1064,7 +1061,8 @@ Connect with us to lay out your miles stones Map</h5>
     
 </div>
  <div class="col-12 mx-auto d-flex flex-row justify-content-center align-items-center text-center text-white fw-light">
-   <h6 class="d-flex flex-row align-items-center text-center copyright_footer mt-2">© 2024
+   <h6 class="d-flex flex-row align-items-center text-center copyright_footer mt-2 fw-light">© 
+    <span class="p-1" id="current_year">2024 </span> 
       AiSystemSoft
       All Rights Reserved</h6>
  </div>
