--- a/practice.html
+++ b/practice.html
@@ -1,73 +1,91 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Theme Switcher</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Practice – Splide Product Slider</title>
+
+  <!-- Bootstrap CSS (optional, for your layout) -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
+  <!-- Splide CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css"
+  />
 
   <style>
-    /* LIGHT THEME */
-    [data-theme="light"] {
-      --color1: #761114;
-      --para-color: #545454;
-      --border-col: #1818182f;
-      --bg-color: white;
-      --text-color: black;
+    /* Ensure images fit their slides */
+    .splide__slide img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
     }
-
-    /* DARK THEME */
-    [data-theme="dark"] {
-      --color1: #ff5555;
-      --para-color: #ccc;
-      --border-col: #ffffff2f;
-      --bg-color: #121212;
-      --text-color: white;
-    }
-
-    /* Apply theme variables */
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    h1 {
-      color: var(--color1);
-    }
-
-    .theme-btn {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
+    /* Optional: adjust arrow colors */
+    .splide__arrow {
+      color: #333;
     }
   </style>
 </head>
+<body class="bg-dark text-white">
 
-<body>
-  <div class="container py-5">
-    <button id="themeToggle" class="btn btn-outline-secondary theme-btn">Toggle Theme</button>
+  <section class="my-5">
+    <div class="container">
+      <h4 class="text-center text-white mb-4">Our Products</h4>
 
-    <h1 class="mb-3">Theme Switch Example</h1>
-    <p>This is an example of a light/dark theme toggle using CSS variables and JavaScript.</p>
-  </div>
+      <!-- Splide Slider Markup -->
+      <div id="product-slider" class="splide bg-white p-3 rounded">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide"><img src="Assets/images/Products-images/automan.png"   alt="automan"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/buoylight.png"  alt="buoylight"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/buoyspot.png"   alt="buoyspot"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/callmatics.png" alt="callmatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/carmatics.png"  alt="carmatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/facematics.png" alt="facematics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/inteliOCR.png"  alt="inteliOCR"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/iport.png"      alt="iport"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/mallmatics-02.png" alt="mallmatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/planetscan.png" alt="planetscan"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/mallmatics.png" alt="mallmatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/medbot.png"    alt="medbot"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/meddroid.png"  alt="meddroid"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/mediatalks.png" alt="mediatalks"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/posmatics.png"  alt="posmatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/predicto.png"  alt="predicto"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/retailatics.png" alt="retailatics"></li>
+            <li class="splide__slide"><img src="Assets/images/Products-images/retailmatics.png" alt="retailmatics"></li>
+          </ul>
+        </div>
+      </div>
+      <!-- /Splide -->
+
+      <h4 class="text-center text-white mt-4">Ultimate AI Powered Products</h4>
+    </div>
+  </section>
+
+  <!-- Bootstrap JS (optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Splide JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/js/splide.min.js"></script>
 
   <script>
-    const themeToggle = document.getElementById("themeToggle");
-    const root = document.documentElement;
-
-    // Set initial theme
-    if (!localStorage.getItem("theme")) {
-      localStorage.setItem("theme", "light");
-    }
-    root.setAttribute("data-theme", localStorage.getItem("theme"));
-
-    // Toggle on button click
-    themeToggle.addEventListener("click", () => {
-      const currentTheme = root.getAttribute("data-theme");
-      const newTheme = currentTheme === "light" ? "dark" : "light";
-      root.setAttribute("data-theme", newTheme);
-      localStorage.setItem("theme", newTheme);
+    document.addEventListener('DOMContentLoaded', function () {
+      new Splide('#product-slider', {
+        perPage: 3,
+        rewind : true,
+        gap    : '1rem',
+        autoplay: true,
+        breakpoints: {
+          576: { perPage: 1 },
+          768: { perPage: 2 },
+          992: { perPage: 3 }
+        },
+      }).mount();
     });
   </script>
 </body>
