--- a/about.html
+++ b/about.html
@@ -353,7 +353,9 @@
   </header>
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
-  <!-- ======================== HEADER END ======================== -->
+  <!-- ======================== HEADER END ======================== --><!-- ======================== MAIN 1 START ======================== -->
+
+  <!-- ======================== MAIN 1 START ======================== -->
 
   <section>
     <div class="container-fluid  home  d-flex flex-column align-items-center justify-content-center">
@@ -592,6 +594,7 @@
 
     </div>
   </section>
+  <!-- ====================== TEAM MEMBER END ==================== -->
 
   <!-- ======================== OUR PRODUCT START======================== -->
   <section>
