--- a/contact.html
+++ b/contact.html
@@ -338,6 +338,7 @@
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
   <!-- ======================== HEADER END ======================== -->
+   <!-- ======================== MAIN 1 START ======================== -->
     
 <section>
     <div class="container-fluid home mb-5 d-flex flex-column align-items-center justify-content-center">
