--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -332,7 +332,7 @@
   </header>
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
-  <!-- ======================== HEADER END ======================== -->
+  <!-- ======================== HEADER END ======================== --><!-- ======================== MAIN 1 START ======================== -->
     <!-- ======================== MAIN 1 START  ======================== -->
 <section>
   <div id="home1" class="home d-flex flex-column justify-content-center  align-items-center">
