--- a/gap_analysis_and_assement.html
+++ b/gap_analysis_and_assement.html
@@ -340,7 +340,7 @@
   </header>
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
-  <!-- ======================== HEADER END ======================== -->
+  <!-- ======================== HEADER END ======================== --><!-- ======================== MAIN 1 START ======================== -->
 
   <!-- ======================== MAIN 1 START ======================== -->
 <section>
