--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
   <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
   <!-- ======================== EXTERNEL CSS FILE ======================== -->
   <link rel="stylesheet" href="CSS/style.css"> 
-  <!-- ======================== EXTERNEL CSS FILE ======================== -->
-   <meta name="twitter:image" content="https://fasihnasiraisystemsoft.netlify.app/Assets/images/Logo/AISS-logo.png"> 
-
-  <!-- ======================== EXTERNEL CSS FILE ======================== -->
-
+  
   <!-- ======================== Bootstrap CSS ======================== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -33,7 +29,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- ======================== SWIPER CDN ======================== -->
   <!-- ======================== Swiper CSS ======================== -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
@@ -343,7 +338,7 @@
   </header>
   <!-- ! NOTE THIS CONTENT IS REMAIN SAME IN EVERY PAGE -->
 
-  <!-- ======================== HEADER END ======================== -->
+  <!-- ======================== HEADER END ======================== --><!-- ======================== MAIN 1 START ======================== -->
 
 
 <!-- ======================== MAIN 1 START ======================== -->
@@ -1078,8 +1073,7 @@ Connect with us to lay out your miles stones Map</h5>
      <!-- Swiper JS -->
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script> -->
-
+ 
   <!-- ======================== EXTERNEL JS FILE ======================== -->
   <script src="JS/app.js"></script>
   <!-- ======================== EXTERNEL JS FILE ======================== -->
