--- a/ai_product_solutions.html
+++ b/ai_product_solutions.html
@@ -495,7 +495,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="~/Assets/images/Service-Image/buoylight_picutre.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="assets/images/Service-Image/buoylight_picutre.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
@@ -544,7 +544,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="~/Assets/images/Service-Image/buoyspot-picture.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="assets/images/Service-Image/buoyspot-picture.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
@@ -598,7 +598,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="~/Assets/images/Service-Image/BuoySPY-1.png" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="assets/images/Service-Image/BuoySPY-1.png" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
@@ -657,7 +657,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="~/Assets/images/Service-Image/callmatic-picture.png" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="assets/images/Service-Image/callmatic-picture.png" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
@@ -717,7 +717,7 @@
                         </p>
                     </div>
                     <div class="col-12 mb-3">
-                        <img src="~/Assets/images/Service-Image/planetscan-picture.jpg" class="img-fluid rounded-3 col-12" alt="">
+                        <img src="assets/images/Service-Image/planetscan-picture.jpg" class="img-fluid rounded-3 col-12" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 d-flex flex-column justify-content-between  align-items-end mt-lg-0 mt-2   flex-row ">
