--- a/headerasp.html
+++ b/headerasp.html
@@ -6,7 +6,7 @@
         <div class="container-fluid d-flex flex-row justify-content-between">
             <!-- ======================== Logo ======================== -->
             <a class="col-lg-2 col-5" href="#">
-                <img src="~/Assets/images/Logo/AISS-logo.png" alt="Logo"
+                <img src="assets/images/Logo/AISS-logo.png" alt="Logo"
                     class="col-lg-4 col-4 img-fluid " id="logo" />
             </a>
 
@@ -176,7 +176,7 @@
             <div class="offcanvas-header container">
                 <h5 class="offcanvas-title">
                     <a class="navbar-brand " href="#">
-                        <img src="~/Assets/images/Logo/AISS-logo.png" alt="Logo"
+                        <img src="assets/images/Logo/AISS-logo.png" alt="Logo"
                             class="col-lg-2 col-4" />
                     </a>
                 </h5>
@@ -331,7 +331,7 @@
             <!-- ======================== Brand Logo and Close Button ======================== -->
             <div
                 class="d-flex justify-content-between w-100 align-items-center ">
-                <img src="~/Assets/images/Logo/AISS-logo.png" alt="Runok Logo"
+                <img src="assets/images/Logo/AISS-logo.png" alt="Runok Logo"
                     class="logo" style="width: 50px;">
                 <button type="button"
                     class="bg-transparent col-org border-0 rounded-circle"
@@ -378,7 +378,7 @@
                 </p>
             </div>
             <div class="col-12 mx-auto">
-                <img src="~/Assets/images/Pictures/exp-img-1.jpg"
+                <img src="assets/images/Pictures/exp-img-1.jpg"
                     class="img-fluid col-12" alt>
             </div>
             <!-- ======================== Social Media Icons ======================== -->
