--- a/grc_services.html
+++ b/grc_services.html
@@ -335,7 +335,7 @@
  <section>
   <div id="home1" class="home d-flex  flex-column justify-content-center align-items-center">
       <!-- =============================== BANNER IMAGE START =========================================== -->
-    <img src="Assets/images/Banner-Image/banner-img-27.png" class="m-0  p-0 w-100 position-absolute banner-img" alt="">
+    <img src="Assets/images/Banner-Image/grc_banner.jpeg" class="m-0  p-0 w-100 position-absolute banner-img" alt="">
       <!-- =============================== BANNER IMAGE End =========================================== -->
       <!-- ======================== MAIN SUB DIV START ======================== -->
          
@@ -407,45 +407,72 @@
                       the aforementioned services. 
                   </p>
               </div>
-              <div class="col-lg-3 col-12 bg py-4  d-flex flex-column  col-12 px-lg-0 px-3  mb-4">
-
-                  <div
-                      class="col-lg-11 col-10 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around   mb-4">
-                      <i class="fas fa-tasks fs-5  bg text-white p-3 rounded-3"></i>
-                      <div class="d-flex flex-column justify-content-center ">
-                          <h4>150 Project</h4>
-                          <p class="fw-light lh-1">We Have Been Completed</p>
-                      </div>
-
-                  </div>
-
-                  <div
-                      class="col-lg-11 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around col-10  mb-4">
-
-                      <i class="fas fa-smile fs-5  bg text-white p-3 rounded-3"></i>
-                      <div class="d-flex flex-column justify-content-center ">
-                          <h3>98 <span class="">%</span></h3>
-                          <p class="fw-light lh-1">Customer Satisfaction</p>
-                      </div>
-                  </div>
-
-                  <div
-                      class="col-lg-11 mx-auto p-2 rounded-3 bg-white   d-flex  align-items-center flex-row justify-content-around col-10  mb-4">
-                      <i class="fas fa-clock fs-5  bg text-white p-3 rounded-3"></i>
-                      <div class="d-flex flex-column justify-content-center ">
-                          <h3>3 <span class="">Mins</span></h3>
-                          <p class="fw-light lh-1">Average Answer Time</p>
-                      </div>
-
-                  </div>
-
-              </div>
+     
           </div>
       </div>
   </div>
 
   <!-- ======================== Spacer ======================== -->
 
+<!-- ============== GRC LOGO'S HERE START ================= -->
+ <div class="container-fluid d-flex flex-lg-wrap ">
+<div class="row justify-content-center">
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6 ">
+    <img src="Assets/images/grc_logo/iso_20000.png" class="img-fluid" alt="">
+  </div>
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_22301.png" class="img-fluid" alt="">
+  </div>
+ <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_27001.PNG" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_27005.PNG" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_31000.PNG" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_37001.PNG" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_37301.PNG" class="img-fluid" alt="">
+  </div>
+   
+ <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6 ">
+    <img src="Assets/images/grc_logo/nist_800_171.png" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/nist_800_53.png" class="img-fluid" alt="">
+  </div>
+     <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/cobit.png" class="img-fluid" alt="">
+  </div>
+  
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/coso.png" class="img-fluid" alt="">
+  </div>
+   <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/iso_9001.PNG" class="img-fluid" alt="">
+  </div> 
+  <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/itil.png" class="img-fluid" alt="">
+  </div>
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/gdpr.png" class="img-fluid" alt="">
+  </div>
+      <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/pci_dss.png" class="img-fluid" alt="">
+  </div>
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/togaf.png" class="img-fluid" alt="">
+  </div>
+    <div class="grc_logo_div col-lg-2 mb-3 col-md-2 col-6">
+    <img src="Assets/images/grc_logo/hipaa.PNG" class="img-fluid" alt="">
+  </div>
+</div>
+ </div>
+<!-- ============== GRC LOGO'S HERE END ================= -->
 
 
 
