--- a/contact.html
+++ b/contact.html
@@ -349,7 +349,7 @@
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="col-12 text-white ">
                 <h2 class=" display-3 text-center">Contact-Us</h2>
-                <h5 class="text-center">Home - Contact </h5>
+                <h5 class="text-center"> Contact </h5>
             </div>
         </div>
         <button class="btnhome btnhome1 d-flex fw-bold">
