--- a/portfolio.html
+++ b/portfolio.html
@@ -347,7 +347,7 @@
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="col-12 text-white ">
                 <h2 class=" display-3 text-center">Portfolio</h2>
-                <h5 class="text-center">Home - Portfolio</h5>
+                <h5 class="text-center"> Portfolio</h5>
             </div>
         </div>
         <button class="btnhome btnhome1 d-flex fw-bold">
