--- a/privacy.html
+++ b/privacy.html
@@ -343,7 +343,7 @@
   <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="col-12 text-white ">
     <h2 class=" display-3 text-center">Privacy</h2>
-    <h5 class="text-center">Home - Privacy</h5>
+    <h5 class="text-center"> Privacy</h5>
   </div>
   </div>
   <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
@@ -360,14 +360,16 @@
   <div class="container text-center bg-white py-4 rounded-4 p-2 text-dark">
     <h3>Privacy Policy</h3>
     <p class="col-lg-10 col-12  mx-auto py-2 fw-normal">This privacy policy (“Privacy Policy”) describes how and why AI SYSTEM SOFT, LLC and its affiliates and/or brands (collectively, “Company,” “we,” “us,” or “our”) that might collect, store, use, and/or share (“process”) your information when you use our services, including without limitation when you visit https://aisystemsoft.com/ (the “Website”) and/or applications available at the Website, and/or engage with us in other related ways (collectively, the “Services”).    </p>
- <div class="text-start ">
+ <div class="text-start col-lg-10 col-12 fw-normal">
   <ol >
     <li class="fs-6">BY USING THE SERVICES, YOU AGREE YOU </li>
     <li>HAVE READ OUR TERMS OF USE AND THIS PRIVACY POLICY IN THEIR ENTIRETY</li>
     <li>UNDERSTAND, AND FULLY ACCEPT OUR TERMS OF USE AND THIS PRIVACY POLICY (COLLECTIVELY, THE “TERMS”). IF YOU DO NOT AGREE TO BE BOUND BY THE TERMS, YOU ARE NOT AUTHORIZED TO ACCESS OR USE OUR SERVICES AND MUST PROMPTLY DISCONTINUE USING AND EXIT THE SERVICES.</li>
     
   </ol>
- </div>
+</div> 
+<hr class="col-10 mx-auto">
+<p class="mx-auto text-start  col-lg-12 ps-lg-3 col-12 fw-normal">Reading this Privacy Policy will help you understand your privacy rights and choices. If you do not agree with either the Terms or our policies and practices, you must discontinue using and exit the Services promptly.</p>
   </div>
   
 
@@ -548,7 +550,7 @@
     </tbody>
   </table>
 
-  <h3>Legal Grounds for Processing Under GDPR</h3>
+  <h5 class="py-3">For individuals whose personal data is subject to the GDPR, we process personal health data based on the following legal grounds, where applicable:</h5>
   <ul>
     <li><strong>Article 6(1)(b)</strong> – Processing is necessary for the performance of a contract to which the data subject is a party.</li>
     <li><strong>Article 9(2)(h)</strong> – Processing is necessary for the purposes of preventive or occupational medicine, medical diagnosis, the provision of health or social care or treatment, or the management of health or social care systems and services.</li>
