--- a/purchasing-terms.html
+++ b/purchasing-terms.html
@@ -343,7 +343,7 @@
   <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="col-12 text-white ">
     <h2 class=" display-3 text-center">Purchasing Terms</h2>
-    <h5 class="text-center">Home - Purchasing Terms</h5>
+    <h5 class="text-center"> Purchasing Terms</h5>
   </div>
   </div>
   <button class="btnhome btnhome1 d-flex fw-bold"><span class="pe-3">Home</span>
