--- a/about.html
+++ b/about.html
@@ -368,7 +368,7 @@
       <div class="d-flex flex-column justify-content-center align-items-center">
         <div class="col-12 text-white ">
           <h2 class=" display-3 text-center">About Us</h2>
-          <h5 class="text-center">Home - About Us</h5>
+          <h5 class="text-center"> About Us</h5>
         </div>
       </div>
       <button class="btnhome btnhome1 d-flex fw-bold">
