--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,9 @@ Connect with us to lay out your miles stones Map</h5>
   <li class="nav-item">
     <a class="nav-link " href="terms-of-use.html">Terms of Use</a>
   </li>
+   <li class="nav-item">
+    <a class="nav-link " href="cookies.html">Cookies </a>
+  </li>
  
 </ul>
 
