--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -354,6 +354,47 @@
    </div>
 </section>
   <!-- ======================== MAIN 1 END ======================== -->
+<!-- ================ CLIENT LOGO SLIDER ============= -->
+ <div class="marquee py-3 border-1 border-bottom">
+  <div class="marquee-content">
+    <img src="Assets/images/clients/subway.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/4_corner_group.png" class="img-fluid" alt="automan" />
+<img src="Assets/images/clients/bank_alfalah.png" class="img-fluid" alt="buoyspot" />
+<img src="Assets/images/clients/dp_world.png" class="img-fluid" alt="callmatics" />
+<img src="Assets/images/clients/engro_food.png" class="img-fluid" alt="carmatics" />
+<img src="Assets/images/clients/Pegasus.png" class="img-fluid" alt="facematics" />
+<img src="Assets/images/clients/access_retail.png" class="img-fluid" alt="inteliOCR" />
+<img src="Assets/images/clients/national_food.png" class="img-fluid" alt="iport" />
+<img src="Assets/images/clients/venus_group.png" class="img-fluid" alt="mallmatics-02" />
+<img src="Assets/images/clients/ubl.png" class="img-fluid" alt="planetscan" />
+<img src="Assets/images/clients/tania.png" class="img-fluid" alt="mallmatics" />
+<img src="Assets/images/clients/pict.png" class="img-fluid" alt="medbot" />
+<img src="Assets/images/clients/mto.png" class="img-fluid" alt="meddroid" />
+<img src="Assets/images/clients/jazz.png" class="img-fluid" alt="mediatalks" />
+<img src="Assets/images/clients/ips_dammam.png" class="img-fluid" alt="posmatics" />
+<img src="Assets/images/clients/i3_pathfiner_solution.png" class="img-fluid" alt="predicto" />
+<img src="Assets/images/clients/herbion.png" class="img-fluid" alt="retailatics" />
+<img src="Assets/images/clients/venus_group.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/motorla.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/ANVIZ.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/PHP.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/react.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/ZKS Group.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/Zebra.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/nct.PNG" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/loreal.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/idro.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/gulf_uae.png" class="img-fluid" alt="retailmatics" />
+<img src="Assets/images/clients/friesland_campina.png" class="img-fluid" alt="retailmatics" />
+
+
+
+
+
+  </div>
+</div>
+
+ <!-- =============== CLIENT LOGO END ===================== -->
 
 
   <!-- =============== TERM OF USE START ======================== -->
